# fb_scraper

./: .gitignore  Pipfile  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: onmergetomain.yml  onpush.yml
src/fb_scraper/: main.py  scraper.py
